# FRRMAB_DK

./: .gitignore  CMakeLists.txt  FRRMAB-DK-qap.cpp  FRRMAB-DK-ubqp.cpp  FRRMAB-qap.cpp  FRRMAB-ubqp.cpp  README.md  statsDKGenerator.cpp  statsGenerator.cpp
moead/: hyperVolume.h  init.h  moAlgo.h  moFRRMAB.h  moFRRMAB_DK.h  moFRRMAB_N_FRR.h  moQAPEval.h  paretoFront.h  repair.h  scalarFunc.h  subProblems.h
moead/evals/: moEval.h  moQAPEval.h  moUBQPEval.h
moead/operators/: crossover.h  mutation.h  operator.h
moead/parsers/: QAP_parser.hpp  UBQP_parser.hpp
moead/solutions/: Solution.h  moQAPSolution.h  moSolution.h  moUBQPSolution.h
resources/: report.tex
resources/qap/: instanceUni_Rl_100.txt
resources/qap/stats/: front_pa.txt  front_pa_frrmab_dk.txt  output.txt
resources/ubqp/: instanceUni_Rl_100.txt  mubqpGenerator.R  ubqpInstance.txt  ubqpInstance10.txt  ubqpInstance500-v2.txt
resources/ubqp/stats/: RStats.R  dataOutput.tex  dataOutputDK.tex  dataOutputTime.tex  dataOutputTimeDK.tex  globalStats.csv  globalStats_DK.csv  output_DK_PF_mubqpInstance_1000_0_a01.txt  output_DK_PF_mubqpInstance_1000_0_a02.txt  output_DK_PF_mubqpInstance_1000_0_a03.txt  output_DK_PF_mubqpInstance_1000_0_a04.txt  output_DK_PF_mubqpInstance_1000_0_a05.txt  output_DK_PF_mubqpInstance_1000_0_a06.txt  output_DK_PF_mubqpInstance_1000_0_a07.txt  output_DK_PF_mubqpInstance_1000_0_a08.txt  output_DK_PF_mubqpInstance_1000_0_a09.txt  output_DK_PF_mubqpInstance_1000_neg02_a01.txt  output_DK_PF_mubqpInstance_1000_neg02_a02.txt  output_DK_PF_mubqpInstance_1000_neg02_a03.txt  (+288 more)
